# AgentRepoRouter

./: .gitignore  AGENTS.md  AI_REVIEW.md  CLAUDE.md  GLOBAL_REVIEW_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  README_CN.md  aiwork.md  demo.py  pyproject.toml  pytest.ini  testsupport.py
.claude/plans/: implementation.md
.specstory/: .project.json
.specstory/history/: 2026-03-14_20-11Z-no-output-issue-in-tests.md  2026-03-15_19-17Z-opencode-metrics-review-and-scheduling.md  2026-03-16_05-24Z-terminal-output-reference.md
config/: README.md  agents.yaml  router_config.yaml
config/agents/: orchai-router.md
dev_readme/mcps/: projectlevel.md
docs/: ARCHITECTURE.md  PRODUCT.md  phase6-self-evolution.md
docs/advertisement/: why-agent-repo-router.md  why-clawrouter.md
docs/migration/: DECISION.md
docs/references/: links.md
legacy/: README.md
legacy/config/: README.md  openclaw.yaml  projects.yaml
legacy/docs/: phase6-self-evolution.md
legacy/openclaw-quick-start/: install.sh
legacy/prompts/: orchai-router.acpx.md
openclaw-quick-start/: README.md
orchai/: __init__.py  acp_adapter.py  cli.py  config.py  init.py  router.py  validator.py
prompts/: agent-repo-router.md  orchai-router.md  router-skill.md
scripts/: README.md  askany_langfuse_ragas_prompt.txt  askany_metrics_review_prompt.txt  askany_sse_streaming_prompt.txt  askany_test_prompt.txt  install.sh  run_askany_metrics_review.sh  run_real_e2e.sh  validate_repo_mappings.sh
skills/agent-repo-router/: SKILL.en.md  SKILL.zh.md
skills/router/: SKILL.en.md  SKILL.zh.md  repo_mappings.json  router.py  skill.md
tests/: README.md  TEST_RESULTS.md  conftest.py
tests/e2e/: test_agent_selection.py  test_custom_agent_skill.py  test_full_flow.py  test_installer_args.py  test_real_cli.py
tests/fixtures/: router_trace.en.md
tests/integration/: test_routing.py
tests/real_e2e/: test_openclaw_live.py
tests/unit/: test_acp_adapter.py  test_router.py
workspace_mds/: README.md  answer.md  chat_summary.md  claude_work.md  implementation_plan.md  optimization_suggestions.md  plan.md  reference_analysis.md  reference_repo.md  全能私人助理架构.md
(+11 files in other folders)
